--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,7 @@
   <body>
       <h2>Test deploya przez GitHuba</h2>
       <h1>Firebase Hosting Setup Complete</h1>
+
+    <p>Test brancha</p>
   </body>
 </html>
