--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
       <h2>Test deploya przez GitHuba</h2>
       <h1>Firebase Hosting Setup Complete</h1>
 
-    <p>Test brancha</p>
+    <p>Test brancha 2</p>
   </body>
 </html>
